<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/default_padding"
    tools:context=".ui.loginPage.LoginScreenActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/wiasecrypto_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/welcome_top_padding"
        android:text="@string/welocome_label"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_login" />

    <TextView
        android:id="@+id/login_welcoome_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_start"
        android:text="@string/app_description"
        android:textColor="@color/bg_splash"
        android:textSize="@dimen/textsize_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_welcome" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_welcoome_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_email_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            app:boxStrokeColor="@color/bg_splash" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/Password"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpiut_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf=" @id/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fogot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_double"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="Forgot Password?"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/inpiut_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/enter"
        app:layout_constraintTop_toBottomOf="@id/fogot_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap_padding"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/default_gap_padding"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_enter">

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_have_account"
            android:textColor="@color/bg_splash" />

        <TextView
            android:id="@+id/register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_here"
            android:textColor="@color/bg_splash" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>