<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_splash"
    android:padding="16dp"
    tools:context=".ui.loginPage.RegisterScreenActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:src="@drawable/logo__1_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up now "
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/login_welcoome_description"
        android:layout_width="329dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:text="@string/app_description"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_welcome" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/full_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_welcoome_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/name_enter"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mobile"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpiut_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/enter_mobile"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/mobile"
        app:layout_constraintTop_toBottomOf="@id/mobile">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_register_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register As"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inpiut_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_register_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="Register as"
        app:layout_constraintStart_toStartOf="@id/txt_register_as"
        app:layout_constraintTop_toBottomOf="@id/txt_register_as">

        <AutoCompleteTextView
            android:id="@+id/register_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginTop="16dp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintTop_toBottomOf="@id/type_register_layout" />

    <TextView
        android:id="@+id/txt_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Login "
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@id/txt_have_account"
        app:layout_constraintTop_toBottomOf="@id/btn_next"
        />


</androidx.constraintlayout.widget.ConstraintLayout>